EXTRA_DIST = CMakeLists.txt \
			ProjInstallPath.cmake \
			ProjUtilities.cmake   \
			proj_config.cmake.in \
			ProjConfig.cmake \
			ProjMac.cmake \
			ProjTest.cmake \
			ProjVersion.cmake \
			policies.cmake \
			proj_config.cmake.in \
			project-config-version.cmake.in \
			project-config.cmake.in \
			FindSqlite3.cmake

